# hass-sgcc

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  lint.yml
hass_sgcc/: const.py  data_fetcher.py  error_watcher.py  firefox_driver_download.py  main.py  onnx.py  sensor_updator.py
scripts/: data_fetcher.py  error_watcher.py  main.py  onnx.py  sensor_updator.py
