[project]
name = "hass-sgcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.2",
    "onnxruntime==1.18.1",
    "pillow==10.1.0",
    "requests==2.31.0",
    "schedule==1.2.1",
    "selenium==4.34.2",
    "webdriver-manager==4.0.2",
    "webdrivermanager-cn==2.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
