[project]
name = "hass-sgcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[socks]>=0.28.1",
    "numpy>=2.4.1,<2.5",
    "onnxruntime>=1.18.1,<2.0",
    "pillow>=10.1.0,<12.0",
    "schedule>=1.2.1,<2.0",
    "selenium>=4.34.2,<5.0",
    "webdrivermanager-cn>=2.4.0,<3.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.1",
    "ruff>=0.14.10",
]
